# NewAsistenteVirtual

./: .gitignore  CLAUDE.md  DOCKER.md  PLAN_MIGRACION.md  docker-compose.dev.yml  docker-compose.yml  docker-deploy.sh  docker-export.sh  docker-install.sh  extensions.conf.txt  extensions.monitoreo.conf.txt  sip.conf.txt  sip.monitoreo.conf.txt
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/asterisk/: ami.rs  config_gen.rs  event_handlers.rs  mod.rs
backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs
backend/src/models/: asterisk_config.rs  canal.rs  canal_clave.rs  credencial_api.rs  ejecucion.rs  equipo.rs  error_code.rs  escenario.rs  ldap_config.rs  matriz.rs  matriz_canal_destino.rs  mod.rs  modulo.rs  numero_externo.rs  operador_telefonico.rs  perfil.rs  perfil_submodulo.rs  prueba.rs  registro_clave.rs  sede.rs  submodulo.rs  tecnologia.rs  tecnologia_operador.rs  usuario.rs
backend/src/routes/: asterisk_config.rs  canales.rs  ejecuciones.rs  equipos.rs  ldap_config.rs  matrices.rs  mod.rs  modulos.rs  numeros_externos.rs  operadores.rs  perfiles.rs  pruebas.rs  registro_clave.rs  sedes.rs  tecnologias.rs  usuarios.rs
backend/src/scheduler/: mod.rs  pruebas_job.rs
backend/src/services/: ejecucion.rs  email.rs  ftp.rs  mod.rs  pdf.rs
backend/src/ws/: handlers.rs  mod.rs
docker/: .env.example  docker-compose.dev.yml  docker-compose.yml
docker-export/: .env.example  docker-compose.yml  docker-import.sh
entel_frontend/: .dockerignore  .env.docker.example  Dockerfile  (+5 more)
(+205 files in other folders)
